--- a/python2.7/BUILD
+++ b/python2.7/BUILD
@@ -44,6 +44,7 @@ DISTRO_DEBS = {
         DISTRO_PACKAGES[distro_suffix]["libpython2.7-stdlib"],
         DISTRO_PACKAGES[distro_suffix]["python-bitarray"],
         DISTRO_PACKAGES[distro_suffix]["python-pkg-resources"],
+        DISTRO_PACKAGES[distro_suffix]["python-setuptools"],
     ] + [DISTRO_PACKAGES[distro_suffix][deb] for deb in DISTRO_DEBS[distro_suffix]],
     entrypoint = [
         "/usr/bin/python2.7",
